--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -12,6 +12,15 @@
       > img {
         max-height: 45px;
       }
+
+      > div {
+        display: flex;
+        gap: 16px;
+        
+        button {
+          height: 45px;
+        }
+      }
     }
   }
 
@@ -87,6 +96,9 @@
           }
         }
       }
+    }
+    .question-list{
+      margin-top: 32px;
     }
   }
 }
