--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -1,11 +1,24 @@
 .question {
   background: #fefefe;
   border-radius: 8px;
-  box-shadow: 0 2px 12px rgba(0,0,0,0.04);
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
   padding: 24px;
 
   & + .question {
     margin-top: 8px;
+  }
+  
+  &.highlighted {
+    background: #F4F0FF;
+    border: 1px solid #835AFD;
+    
+    footer .user-info span {
+      color: #29292E;
+    }
+  }
+  
+  &.answered {
+    background: #DBDCDD;
   }
 
   p {
@@ -17,40 +30,51 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 24px;
+
     .user-info {
       display: flex;
       align-items: center;
+
       img {
         width: 32px;
         height: 32px;
         border-radius: 50%;
       }
+
       span {
         margin-left: 8px;
         color: #737380;
         font-size: 14px;
       }
     }
+
+    > div {
+      display: flex;
+      gap: 16px;
+    }
+
     button {
       border: 0;
-      cursor: pointer;
       background: transparent;
-      transition: filter 0.2;
+      cursor: pointer;
+      transition: filter 0.2s;
 
-      &.like-button{
+      &.like-button {
         display: flex;
         align-items: flex-end;
         color: #737380;
         gap: 8px;
 
-        &.liked{
+        &.liked {
           color: #835afd;
+
           svg path {
             stroke: #835afd;
           }
         }
       }
-      &:hover{
+
+      &:hover {
         filter: brightness(0.7);
       }
     }
