--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -1,30 +1,37 @@
+@import 'common';
+
 #page-auth {
   display: flex;
   align-items: stretch;
   height: 100vh;
+
   aside {
     flex: 7;
-    background: #835afd;
+    background: $primary-color;
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 120px 80px;
+
     img {
       max-width: 320px;
     }
+
     strong {
-      font: 700 36px "Poppins", sans-serif;
+      font: 700 36px $poppins;
       line-height: 42px;
       margin-top: 16px;
     }
+
     p {
       font-size: 24px;
       line-height: 32px;
       margin-top: 16px;
-      color: #f8f8f8;
+      color: $background;
     }
   }
+
   main {
     flex: 8;
     padding: 0 32px;
@@ -32,6 +39,7 @@
     align-items: center;
     justify-content: center;
   }
+
   .main-content {
     display: flex;
     flex-direction: column;
@@ -43,76 +51,104 @@
     > img {
       align-self: center;
     }
-    h2{
+
+    h2 {
       font-size: 24px;
       margin: 64px 0 24px;
-      font-family: 'Poppins', sans-serif;
+      font-family: $poppins;
     }
+
     form {
       input {
         height: 50px;
-        border-radius: 8px;
+        border-radius: $border-radius;
         padding: 0 16px;
         background: #fff;
-        border: 1px solid #a8a8b3;
+        border: 1px solid $separator-color;
       }
+
       button {
         margin-top: 16px;
       }
+
       button,
       input {
         width: 100%;
       }
     }
   }
-  p{
-    font-size:14px;
+
+  p {
+    font-size: 14px;
     color: #737388;
     margin-top: 16px;
-    a{
-      color: #e559f9;
+
+    a {
+      color: $questions-counter;
     }
   }
+
   .create-room {
     margin-top: 64px;
     height: 50px;
-    border-radius: 8px;
+    border-radius: $border-radius;
     font-weight: 500;
     background: #ea4335;
     color: #fff;
     display: flex;
-    justify-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     border: 0;
-    transition: filter 0.2s;
+    @include transition;
 
     img {
       margin-right: 8px;
     }
+
     &:hover {
       filter: brightness(0.9);
     }
   }
+
   .separator {
     font-size: 14px;
-    color: #a8a8b3;
+    color: $separator-color;
     margin: 32px 0;
     display: flex;
     align-items: center;
+
     &::before {
-      content: "";
-      flex: 1;
-      height: 1px;
-      background: #a8a8b3;
-      margin-right: 16px;
+      @include separator;
     }
+
     &::after {
-      content: "";
-      flex: 1;
-      height: 1px;
-      background: #a8a8b3;
-      margin-right: 16px;
+      @include separator;
+      margin-left: 16px;
+      margin-right: 0;
     }
   }
+}
+
+@media only screen and (max-width: $max-width-mobile){
+  #page-auth {
+    display: block;
+
+    aside {
+      padding: 0 40px 40px 40px;
+    }
+
+    .create-room {
+      margin-top: 40px
+    }
+  }
+  main {
+    padding-bottom: 20px!important;
+  }
+  .main-content {
+    > img {
+      display: none;
+    }
+  }
+
 }
