--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,14 +1,16 @@
+@import 'common';
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  background: #f8f8f8;
-  color: #29292e;
+body {
+  background: $background;
+  color: $font-color;
 }
 
-body, input, button, textarea{
+body, input, button, textarea {
   font: 400 16px 'Roboto', sans-serif;
 }
