--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,8 +1,10 @@
+@import 'common';
+
 .button {
   height: 50px;
-  border-radius: 8px;
+  border-radius: $border-radius;
   font-weight: 500;
-  background: #835afd;
+  background: $primary-color;
   color: #fff;
   display: flex;
   padding: 0 32px;
@@ -10,21 +12,24 @@
   align-items: center;
   cursor: pointer;
   border: 0;
-  transition: filter 0.2s;
+  @include transition;
 
   img {
     margin-right: 8px;
   }
+
   &:not(disabled):hover {
     filter: brightness(0.9);
   }
+
   &:disabled {
     opacity: 0.6;
     cursor: not-allowed;
   }
+
   &.outlined {
     background: #fff;
-    border: 1px solid #835afd;
-    color: #835afd;
+    border: 1px solid $primary-color;
+    color: $primary-color;
   }
 }
