--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -1,28 +1,31 @@
+@import 'common';
+
 .question {
   background: #fefefe;
-  border-radius: 8px;
-  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
+  border-radius: $border-radius;
   padding: 24px;
+  @include box-shadow;
 
   & + .question {
     margin-top: 8px;
   }
-  
+
   &.highlighted {
     background: #F4F0FF;
-    border: 1px solid #835AFD;
-    
+    border: 1px solid $primary-color;
+
     footer .user-info span {
-      color: #29292E;
+      color: $font-color;
     }
   }
-  
+
   &.answered {
     background: #DBDCDD;
   }
 
   p {
-    color: #29292e;
+    color: $font-color;
+    text-align: justify;
   }
 
   footer {
@@ -43,7 +46,7 @@
 
       span {
         margin-left: 8px;
-        color: #737380;
+        color: $gray;
         font-size: 14px;
       }
     }
@@ -57,19 +60,19 @@
       border: 0;
       background: transparent;
       cursor: pointer;
-      transition: filter 0.2s;
+      @include transition;
 
       &.like-button {
         display: flex;
         align-items: flex-end;
-        color: #737380;
+        color: $gray;
         gap: 8px;
 
         &.liked {
-          color: #835afd;
+          color: $primary-color;
 
           svg path {
-            stroke: #835afd;
+            stroke: $primary-color;
           }
         }
       }
